<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Microsoft Corporation. All rights reserved.
  ~ Licensed under the MIT License.
  ~
  -->

<resources>
    <string name="two_page_app_name">Two Page</string>
    <string name="article_title">The Roman Colosseum</string>
    <string name="two_page_image_caption">Roman Colosseum, ancient history</string>
    <string name="two_page_page1_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</string>
    <string name="two_page_page2_title1">Why do we use it?</string>
    <string name="two_page_page2_text1">"It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using &apos;Content here, content here&apos;, making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for &apos;lorem ipsum&apos; will uncover many web sites still in their infancy.</string>
    <string name="two_page_page2_title2">Where can I get some?</string>
    <string name="two_page_page2_text2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.</string>
    <string name="two_page_page3_title1">Origins and Discovery</string>
    <string name="two_page_page3_text1">Until recently, the prevailing view assumed lorem ipsum was born as a nonsense text. &quot;It&apos;s not Latin, though it looks like it, and it actually says nothing,&quot; Before &amp; After magazine answered a curious reader, &quot;Its &apos;words&apos; loosely approximate the frequency with which letters occur in English, which is why at a glance it looks pretty real.&quot; \n\nAs Cicero would put it, &quot;Um, not so fast.&quot;\n\nThe placeholder text, beginning with the line &quot;Lorem ipsum dolor sit amet, consectetur adipiscing elit&quot;, looks like Latin because in its youth, centuries ago, it was Latin. \n\nRichard McClintock, a Latin scholar from Hampden-Sydney College, is credited with discovering the source behind the ubiquitous filler text. In seeing a sample of lorem ipsum, his interest was piqued by consectetur—a genuine, albeit rare, Latin word. Consulting a Latin dictionary led McClintock to a passage from De Finibus Bonorum et Malorum (&quot;On the Extremes of Good and Evil&quot;), a first-century B.C. text from the Roman philosopher Cicero.</string>
    <string name="two_page_page4_title1">Here is the classic lorem ipsum passage followed by Boparai\'s odd, yet mesmerizing version:</string>
    <string name="two_page_page4_text1">&quot;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam hendrerit nisi sed sollicitudin pellentesque. Nunc posuere purus rhoncus pulvinar aliquam. Ut aliquet tristique nisl vitae volutpat. Nulla aliquet porttitor venenatis. Donec a dui et dui fringilla consectetur id nec massa. Aliquam erat volutpat. Sed ut dui ut lacus dictum fermentum vel tincidunt neque. Sed sed lacinia lectus. Duis sit amet sodales felis. Duis nunc eros, mattis at dui ac, convallis semper risus. In adipiscing ultrices tellus, in suscipit massa vehicula eu.&quot;</string>
    <string name="two_page_page4_title2">Boparai\'s version:</string>
    <string name="two_page_page4_text2">&quot;Rrow itself, let it be sorrow; let him love it; let him pursue it, ishing for its acquisitiendum. Because he will ab hold, uniess but through concer, and also of those who resist. Now a pure snore disturbeded sum dust. He ejjnoyes, in order that somewon, also with a severe one, unless of life. May a cusstums offficer somewon nothing of a poison-filled. Until, from a twho, twho chaffinch may also pursue it, not even a lump. But as twho, as a tank; a proverb, yeast; or else they tinscribe nor. Yet yet dewlap bed. Twho may be, let him love fellows of a polecat.  Now amour, the, twhose being, drunk, yet twhitch and, an enclosed valley’s always a laugh.&quot;</string>
    <string name="two_page_page1_page_number">PAGE 1 of 4</string>
    <string name="two_page_page2_page_number">PAGE 2 of 4</string>
    <string name="two_page_page3_page_number">PAGE 3 of 4</string>
    <string name="two_page_page4_page_number">PAGE 4 of 4</string>

</resources>
